<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MoGawe</string>
    <string name="hint_nama_produk">Masukkan Nama Produk</string>
    <string name="hint_deskripsi_produk">Masukkan Deskripsi Produk, deskripsi yang detail akan membantu peluang produk anda terjual lebih besar</string>
    <string name="hint_youtube_url">Masukkan Youtube Url</string>
    <string name="hint_brand_produk">Masukkan Brand Produk</string>
    <string name="address">Alamat</string>
    <string name="address_street">Jalan</string>
    <string name="address_no">Nomor/Kavling</string>
    <string name="address_subdistrict">Kelurahan</string>
    <string name="address_district">Kecamatan</string>
    <string name="address_city">Kota</string>
    <string name="address_province">Provinsi</string>
    <string name="address_post_code">Kode Pos</string>
    <string name="add_detail_address">Tambah detail alamat</string>
    <string name="agree_terms_and_conds">Saya sudah membaca dan setuju dengan &lt;u>&lt;b>\"Perjanjian kerja sama kemitraan Mogawe\"&lt;/b>&lt;/u>.</string>
    <string name="birthdate">Tanggal Lahir</string>
    <string name="biz_location">Lokasi Kesibukan</string>
    <string name="building_name">Nama Gedung/Mall/Perkantoran</string>
    <string name="business_type">Jenis Usaha</string>
    <string name="choose_location_on_map">Pilih Lokasi Di Peta</string>
    <string name="company">Perusahaan</string>
    <string name="confirm_new_password">Konfirmasi Password Baru</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="courier">Anter Barang</string>
    <string name="date">Tanggal</string>
    <string name="deliver">Antar</string>
    <string name="description">Deskripsi</string>
    <string name="destination_location">Lokasi tujuan</string>
    <string name="dimension">Dimensi</string>
    <string name="display">Display</string>
    <string name="driver">Driver</string>
    <string name="driver_name">Nama Driver</string>
    <string name="driver_pickup_here">Driver akan mengambil barang dari lokasi ini</string>
    <string name="driver_send_here">Driver akan mengirim barang ke lokasi ini</string>
    <string name="edit">Edit</string>
    <string name="education">Pendidikan</string>
    <string name="email">Email</string>
    <string name="expedition_insurance">Asuransi Perjalanan</string>
    <string name="extra_service">Laynan Ekstra</string>
    <string name="fact_id">Fact Id</string>
    <string name="section_id">Section Id</string>
    <string name="view_position">View Position</string>
    <string name="id_fact_type">Id Fact Type</string>
    <string name="is_visible">Is Visible</string>
    <string name="is_verified">Is Verified</string>
    <string name="is_enable">Is Enable</string>
    <string name="value">value</string>
    <string name="freight">Jasa Angkut</string>
    <string name="from">Dari</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="gawean">Gawean</string>
    <string name="gaweanKu">GaweanKu</string>
    <string name="riwayat">Riwayat</string>
    <string name="gawean_location">Lokasi Gawean</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="gender_female">Perempuan</string>
    <string name="gender_male">Laki-laki</string>
    <string name="greeting_mogawers">Halo MoGawers!</string>
    <string name="greeting_login">Masuk aja dengan email kamu</string>
    <string name="hint">Petunjuk</string>
    <string name="index">Index</string>
    <string name="input">Input</string>
    <string name="input_note">Masukkan Catatan</string>
    <string name="item">Item</string>
    <string name="item_id">Item Id</string>
    <string name="meta_id">Meta Id</string>
    <string name="item_description_hint_small">Deskripsi paket/berat paket (kg)</string>
    <string name="item_description_hint_medium">Deskripsi paket/berat paket (kg)</string>
    <string name="item_description_hint_large">Deskripsi paket/berat paket (kg)</string>
    <string name="item_type">Jenis Barang</string>
    <string name="history">Histori</string>
    <string name="height">T</string>
    <string name="lets_start">Ayo Mulai</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="coordinate">Lokasi</string>
    <string name="location_full">Lokasi/Provinsi/Kota</string>
    <string name="max_value">Maximum Value</string>
    <string name="min_value">Minimum Value</string>
    <string name="max_length">Maximum Length</string>
    <string name="min_length">Minimum Length</string>
    <string name="name">Nama</string>
    <string name="new_password">Password Baru</string>
    <string name="note">Catatan</string>
    <string name="order_number">Order Number</string>
    <string name="package_delivery">Anter Barang</string>
    <string name="password">Password</string>
    <string name="retypepassword">Ketik ulang Password-mu</string>
    <string name="phone_number">Nomor Handphone</string>
    <string name="pick_up_date">Tanggal Pick-up</string>
    <string name="pick_up_now">Pick-up sekarang</string>
    <string name="pick_up_location">Lokasi pick-up</string>
    <string name="please_fill_data">Mohon lengkapi data-data Anda</string>
    <string name="please_wait">Harap tunggu…</string>
    <string name="order_complete">Pembayaran dan pesanan sudah diteruskan ke pembeli. Yuk kabari pembeli untuk menyelesaikan pembayarannya ya. </string>
    <string name="profile">Profil</string>
    <string name="question">Pertanyaan</string>
    <string name="question_group">Question Group</string>
    <string name="register_as_user">Daftar sebagai user</string>
    <string name="register_as_partner">Daftar sebagai mitra</string>
    <string name="request_failed">Permintaan Gagal</string>
    <string name="request_success">Permintaan Sukses</string>
    <string name="research_experience">Pengalaman Riset</string>
    <string-array name="road_type">
        <item>Pilih Tipe Jalan</item>
        <item>1 Mobil</item>
        <item>2 Mobil</item>
        <item>Motor</item>
    </string-array>
    <string name="select_date">Pilih Tanggal</string>
    <string name="select_vehicle">Pilih Kendaraan</string>
    <string name="selection_validate">Validasi Pilihan</string>
    <string name="is_mandatory">Kewajiban</string>
    <string name="fact">Fact</string>
    <string name="item_view_name">Item View Name</string>
    <string name="meta_view_name">Meta View Name</string>
    <string name="settings">Setting</string>
    <string name="starting_job">Memulai gawean…</string>
    <string name="sms_with_activation_code_sent">Kode aktifasi telah dikirim melalu SMS ke nomor Anda</string>
    <string name="sms_with_validation_code_sent">Kode validasi telah dikirim melalu SMS ke nomor Anda</string>
    <string name="store_name">Nama Toko</string>
    <string name="store_location">Lokasi Toko (Lantai/Blok)</string>
    <string name="store_address">Alamat Toko</string>
    <string-array name="store_type">
        <item>Pilih Lokasi</item>
        <item>Dalam Pasar</item>
        <item>Sekitar Pasar</item>
        <item>Pemukiman</item>
        <item>Sekitar Sekolah</item>
        <item>Sekitar Kantor Pelayanan Publik</item>
        <item>Sekitar Sekolah</item>
    </string-array>
    <string name="to">Ke</string>
    <string name="transportation">Anter Orang</string>
    <string name="validation_code">Kode Validasi</string>
    <string name="vehicle">Kendaraan</string>
    <string name="vehicle_and_services">Kendaraan Dan Layanan</string>
    <string name="warehouse">Pergudangan</string>
    <string name="weight">Berat</string>
    <string name="width">L</string>
    <string name="what_business">Usaha Lainnya</string>
    <string name="update_available">Pembaharuan Tersedia</string>
    <string name="update_available_message"><![CDATA[Versi tebaru aplikasi <b>MoGawe</b> telah tersedia di <i>PlayStore</i>. Segera update aplikasi, dan dapatkan fitur terbaru dari aplikasi <b>MoGawe</b>]]></string>
    <string name="update_now">Update Sekarang</string>
    <string name="update_later">Nanti saja?</string>
    <string name="update_force"><![CDATA[\"Demi kenyamanan <i>MoGawers</i> dalam mengerjakan Gawean. Update aplikasi <b>MoGawe</b> sekarang juga\"]]></string>
    <string name="mogawe_profile">MoGawe Profil</string>
    <string name="ubah">Ubah</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="item_is_selected">Item is selected</string>
    <string name="meta_is_selected">Meta is selected</string>
    <string name="button_is_selected">Button is selected</string>
    <string name="uri_video">Video Uri</string>
    <string name="slider_step">slider_step</string>
    <string name="priority_count">Jumlah Prioritas</string>
    <string name="saya_mengerti">Saya Mengerti</string>
    <string name="action.add" tools:ignore="ExtraTranslation">Tambah</string>
    <string name="action.add_store" tools:ignore="ExtraTranslation">Tambah Toko</string>
    <string name="action.activate" tools:ignore="ExtraTranslation">Aktivasi</string>
    <string name="action.alright" tools:ignore="ExtraTranslation">Siap</string>
    <string name="action.bursa" tools:ignore="ExtraTranslation">Bursa</string>
    <string name="action.cancel" tools:ignore="ExtraTranslation">Batal</string>
    <string name="action.continue" tools:ignore="ExtraTranslation">Lanjut</string>
    <string name="action.done" tools:ignore="ExtraTranslation">Selesai</string>
    <string name="action.edit_address" tools:ignore="ExtraTranslation">Edit Alamat</string>
    <string name="action.edit_profile" tools:ignore="ExtraTranslation">Simpan</string>
    <string name="action.forgot_password" tools:ignore="ExtraTranslation">Lupa Password?</string>
    <string name="action.set_up_password" tools:ignore="ExtraTranslation">Simpan Password</string>
    <string name="action.fulfill_your_profile" tools:ignore="ExtraTranslation">Lengkapi Sekarang</string>
    <string name="action.finish" tools:ignore="ExtraTranslation">Selesai</string>
    <string name="action.gawean" tools:ignore="ExtraTranslation">GaweanKu</string>
    <string name="action.home" tools:ignore="ExtraTranslation">Home</string>
    <string name="action.cari" tools:ignore="ExtraTranslation">Cari</string>
    <string name="action.cariGawean" tools:ignore="ExtraTranslation">Cari Gawean</string>
    <string name="action.bantuan" tools:ignore="ExtraTranslation">Bantuan</string>
    <string name="action.go_inside" tools:ignore="ExtraTranslation">Masuk Ke Dalam Gedung</string>
    <string name="action.history" tools:ignore="ExtraTranslation">Histori</string>
    <string name="action.login" tools:ignore="ExtraTranslation">Log In</string>
    <string name="action.login_here" tools:ignore="ExtraTranslation"><![CDATA[Sudah punya akun? <b>Log in di sini</b>]]></string>
    <string name="action.logout" tools:ignore="ExtraTranslation">Log Out</string>
    <string name="action.sendMessage" tools:ignore="ExtraTranslation">Kirim Pesan</string>
    <string name="action.inputResi" tools:ignore="ExtraTranslation">Input Resi</string>
    <string name="action.next" tools:ignore="ExtraTranslation">Lanjut</string>
    <string name="action.previous" tools:ignore="ExtraTranslation">Sebelumnya</string>
    <string name="action.nextSms" tools:ignore="ExtraTranslation">Lanjut dengan SMS</string>
    <string name="action.nextCitcall" tools:ignore="ExtraTranslation">Lanjut dengan Miscall</string>
    <string name="edit_foto"><u>Edit Foto</u></string>
    <string name="edukasi">Edukasi</string>
    <string name="fill_your_data">Isi Data Kamu</string>
    <string name="data_must_be_valid">Data harus lengkap dan valid ya!</string>
    <string name="choose">Pilih</string>
</resources>