<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context="com.mogawe.mosurvei.view.content.supplier.user.SupplierRegistrationActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/appbar_translucent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingBottom="32dp">


        <com.mogawe.mosurvei.util.ui.GalanoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_your_data"
                android:textSize="@dimen/font_xxbig" />

            <com.mogawe.mosurvei.util.ui.GalanoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/data_must_be_valid"
                android:textSize="@dimen/font_medium" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtFullnameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_triple"
                android:hint="@string/full_name">

                <EditText
                    android:id="@+id/edtFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill,LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtEmailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    tools:ignore="Autofill,LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtPasswordWrapperWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:ignore="Autofill,LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtStoreNameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xtra"
                android:hint="@string/store_name">

                <EditText
                    android:id="@+id/edtStoreName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill,LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_half"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/store_address"
                        android:textSize="@dimen/font_small" />

                    <TextView
                        android:id="@+id/txvStoreAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/store_address"
                        android:layout_marginTop="@dimen/space_half"
                        android:textSize="@dimen/font_xmedium" />

                </LinearLayout>


                <TextView
                    android:id="@+id/btnSelectAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/choose"
                    android:textColor="?attr/colorPrimary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/space_half"
                android:layout_marginTop="@dimen/space_half"
                android:layout_marginRight="@dimen/space_half"
                android:background="@color/grey_900" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xxtra"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbTermsAndConds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txvTermsAndConds"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/agree_terms_and_conds"
                    android:textColor="@color/grey_600"
                    android:textSize="@dimen/font_small" />

            </LinearLayout>

            <com.mogawe.mosurvei.util.ui.GalanoButton
                android:id="@+id/btnRegister"
                style="@style/GenericRaisedButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space"
                android:layout_marginBottom="@dimen/space_double"
                android:text="@string/action.register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xmedium"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
