<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mogawe.mosurvei.view.content.profile.edit_profile.EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/appBar"
            layout="@layout/appbar_light" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/space_quadruple"
                android:paddingRight="@dimen/space_quadruple"
                android:paddingBottom="@dimen/space">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imvProfileEdit"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_double"
                    android:src="@color/grey_200"
                    app:civ_border_color="@color/grey_400"
                    app:civ_border_width="1dp" />

                <TextView
                    android:id="@+id/txvEditFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:text="@string/edit_foto"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtFullnameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:hint="@string/full_name">

                    <EditText
                        android:id="@+id/edtFullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:inputType="textPersonName"
                        android:textColor="@color/grey_800" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_half"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            android:textSize="@dimen/font_small" />

                        <TextView
                            android:id="@+id/txvPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            android:textSize="@dimen/font_xmedium" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/btnChangePhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/ubah"
                        android:textColor="?attr/colorPrimary" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/space_half"
                    android:layout_marginTop="@dimen/space_half"
                    android:layout_marginRight="@dimen/space_half"
                    android:background="@color/grey_900" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtAddressWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/edtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textPostalAddress"
                        android:textColor="@color/grey_800" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_half"
                    android:layout_marginLeft="@dimen/space_half"
                    android:layout_marginTop="@dimen/space_half"
                    android:text="@string/gender"
                    android:textSize="@dimen/font_small" />


                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdMale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/gender_male" />

                    <RadioButton
                        android:id="@+id/rdFemale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender_female" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtBirthdateWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_half"
                    android:hint="@string/birthdate">

                    <EditText
                        android:id="@+id/edtBirthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="date"
                        android:textColor="@color/grey_800" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacex"
                    android:text="@string/edukasi"
                    android:textSize="@dimen/font_xmedium" />


                <Spinner
                    android:id="@+id/spinnerEdukasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/Edukasi_array"
                    android:padding="@dimen/space_half" />

                <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:layout_marginTop="@dimen/space"-->
                    <!--android:background="@color/grey_900" />-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacex"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edtPasswordWrapper"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content"
                        android:hint="@string/password">

                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text=""
                            android:enabled="false"
                            tools:ignore="Autofill,LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/btnChangePassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/ubah"
                        android:textColor="?attr/colorPrimary"
                        android:textAlignment="center"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacex"
                    android:layout_marginBottom="80dp"/>

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

    <Button
    android:id="@+id/btnEditProfile"
    style="@style/GenericRaisedButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_margin="@dimen/space_double"
    android:layout_marginTop="@dimen/space_double"
    android:text="@string/action.edit_profile"
    android:textAllCaps="false"
    android:textColor="@color/white" />

</FrameLayout>
